Typos and css fix

--- a/_posts/2019-01-19-demo-post.md
+++ b/_posts/2019-01-19-demo-post.md
@@ -37,7 +37,7 @@ final case class Leaf[T](value: T) extends Tree[T]
 
 def invert[T](tree: Tree[T]): Tree[T] =
   tree match {
-    case Node(l, r) => Node(invert(l), invert(r))
+    case Node(l, r) => Node(invert(r), invert(l))
     case leaf => leaf
   }
 {% endhighlight %}
